--- a/css/styles.css
+++ b/css/styles.css
@@ -30,4 +30,104 @@ summary{
 
 body {
     background: #edeef0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;  
+    margin: 0;
+    padding: 0;
+    overflow-y: hidden;
+}
+
+#container {
+    display: flex;
+    flex-direction: row;
+}
+
+#sidebar {
+    display: none;
+    color: #8a8b8c;
+    background: #212529;
+    height: 100vh;
+    padding: 0rem 15px 0rem 15px;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+@media (min-width: 768px) {
+    #sidebar {
+        min-width: 17.5em;
+        display: flex;
+        max-width: 16.66666667%;
+    }
+}
+
+#tables {
+    overflow-y: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem 0rem 1rem;
+}
+
+.box_shadow {
+    box-shadow: 0 .125rem .25rem rgba(28,43,54,.075)!important;
+    border-radius: .35rem !important;
+    box-sizing: border-box;
+    margin-bottom: 1rem !important;
+    color: #58666e;
+    background-color: #fff;
+    padding: 1rem;
+}
+
+.table_container {
+
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+
+    border-collapse: collapse;
+    text-align: center;
+    width: 75%;
+
+    border-radius: .35rem !important;
+    font-weight: 300;
+}
+
+th {
+    background-color: #f8f9fa;
+    color: #58666e;
+    font-weight: 600;
+    padding: .55rem;
+    font-size: 1.1rem;
+    text-align: center;
+}
+
+td {
+    padding: .55rem;
+    font-size: 1.1rem;
+    text-align: center;
+}
+
+.btn {
+    font-size: 1rem;
+    font-weight: 400;
+    box-shadow: 0 .125rem .25rem rgba(28, 43, 54, .075) !important;
+    border-radius: .35rem !important;
+    align-items: center !important;
+    display: flex !important;
+    padding: .5rem 1rem;
+    text-decoration: none !important;
+    cursor: pointer;
+    color: white;
+    list-style: none;
+    color: #babec2;
+}
+
+.btn:hover {
+    background-color: #191d21;
+}
+
+.table_link {
+    text-decoration: none;
+    color: #58666e;
+    font-weight: 400;
 }
