--- a/css/styles.css
+++ b/css/styles.css
@@ -3,29 +3,14 @@ img{
     height: auto;    
 }
 .center{
-   display: flex; 
+    display: flex; 
     justify-content: center; 
     align-items: center;
-   }
-summary{
- text-indent: 15%;
-  padding: 4px;
-  width: 150px;
-  background-color: #eeeeee;
-  border: none;
-  box-shadow: 2px 2px 3px #bbbbbb;
-  cursor: pointer;
+    margin-top: 1rem;
 }
-.details{
-  background-color: #eeeeee;
-  padding: 4px;
-  margin-left: 33px;
-  box-shadow: 2px 2px 3px #bbbbbb;
-}
-.back{
-  background-color: #eeeeee;
-  padding: 4px;
-  box-shadow: 2px 2px 3px #bbbbbb;
+
+.back {
+    color: #58666e;
 }
 
 body {
@@ -63,7 +48,8 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 1rem 1rem 0rem 1rem;
+    padding: 1rem 1rem 1rem 1rem;
+    height: 100vh;
 }
 
 .box_shadow {
@@ -127,6 +113,27 @@ td {
 }
 
 .table_link {
+    text-decoration: none;
+    color: #58666e;
+    font-weight: 400;
+}
+
+.image_grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 1rem;
+    padding: 1rem;
+}
+
+.image_subtext {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.image_link {
     text-decoration: none;
     color: #58666e;
     font-weight: 400;
