--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ img{
     font-size: 1.1rem;
 }
 
+th {
+    width: 14%;
+}
+
 body {
     background: #edeef0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;  
@@ -36,11 +40,27 @@ body {
     flex-direction: column;
     box-sizing: border-box;
 }
-@media (min-width: 960px) {
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+
+    border-collapse: collapse;
+    text-align: center;
+    width: 95%;
+
+    border-radius: .35rem !important;
+    font-weight: 300;
+}
+
+@media (min-width: 1100px) {
     #sidebar {
         min-width: 17.5em;
         display: flex;
         max-width: 16.66666667%;
+    }
+    table {
+        width: 75%;
     }
 }
 
@@ -65,18 +85,6 @@ body {
 
 .table_container {
 
-}
-
-table {
-    margin-left: auto;
-    margin-right: auto;
-
-    border-collapse: collapse;
-    text-align: center;
-    width: 75%;
-
-    border-radius: .35rem !important;
-    font-weight: 300;
 }
 
 th {
