add lazy loading

--- a/css/styles.css
+++ b/css/styles.css
@@ -163,10 +163,12 @@ td {
 .timeline {
     display: flex;
     transition: transform 0.3s ease-in-out;
+    width: 100%;
 }
 
 .timeline-item {
     min-width: 100%;
+    max-width: 100%;
     transition: transform 0.3s ease-in-out;
 }
 
@@ -218,24 +220,24 @@ input[type="range"] {
     background: transparent;
     cursor: pointer;
     width: 25rem;
-  }
-  
-  /* Removes default focus */
-  input[type="range"]:focus {
+}
+
+/* Removes default focus */
+input[type="range"]:focus {
     outline: none;
-  }
-  
-  /******** Chrome, Safari, Opera and Edge Chromium styles ********/
-  /* slider track */
-  input[type="range"]::-webkit-slider-runnable-track {
+}
+
+/******** Chrome, Safari, Opera and Edge Chromium styles ********/
+/* slider track */
+input[type="range"]::-webkit-slider-runnable-track {
     background-color: #3f4b44;
     border-radius: 1rem;
     height: 1rem;
     opacity: 0.8;
-  }
-  
-  /* slider thumb */
-  input[type="range"]::-webkit-slider-thumb {
+}
+
+/* slider thumb */
+input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none; /* Override default look */
     appearance: none;
     margin-top: -4px; /* Centers thumb on the track */
@@ -243,32 +245,42 @@ input[type="range"] {
     border-radius: 1rem;
     height: 1.5rem;
     width: 1.5rem;
-  }
-  
-  input[type="range"]:focus::-webkit-slider-thumb {
+}
+
+input[type="range"]:focus::-webkit-slider-thumb {
     outline: 3px solid #009b3d;
     outline-offset: 0.125rem;
-  }
-  
-  /*********** Firefox styles ***********/
-  /* slider track */
-  input[type="range"]::-moz-range-track {
+}
+
+/*********** Firefox styles ***********/
+/* slider track */
+input[type="range"]::-moz-range-track {
     background-color: #3f4b44;
     border-radius: 1rem;
     height: 1rem;
     opacity: 0.8;
-  }
-  
-  /* slider thumb */
-  input[type="range"]::-moz-range-thumb {
+}
+
+/* slider thumb */
+input[type="range"]::-moz-range-thumb {
     background-color: #009b3d;
     border: none; /*Removes extra border that FF applies*/
     border-radius: 1rem;
     height: 1.5rem;
     width: 1.5rem;
-  }
-  
-  input[type="range"]:focus::-moz-range-thumb{
+}
+
+input[type="range"]:focus::-moz-range-thumb{
     outline: 3px solid #009b3d;
     outline-offset: 0.125rem;
-  }
+}
+
+.lazyload {
+    opacity: 0;
+}
+
+.lazyloading {
+    opacity: 1;
+    transition: opacity 300ms;
+    background: #f7f7f7 url(loading.gif) no-repeat center;
+}
